Comments updated